--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.0",
+    "class-transformer": "^0.3.2",
+    "class-validator": "^0.13.1",
     "cookie-parser": "^1.4.5",
     "faker": "^5.1.0",
     "passport": "^0.4.1",
