--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "autoprefixer": "^10.2.3",
     "axios": "^0.21.1",
     "classnames": "^2.2.6",
+    "dayjs": "^1.10.4",
     "next": "10.0.5",
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
