--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "cookie-parser": "^1.4.5",
     "faker": "^5.1.0",
     "passport": "^0.4.1",
+    "passport-anonymous": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
@@ -52,6 +53,7 @@
     "@types/faker": "^5.1.5",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
+    "@types/passport-anonymous": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.10",
